src/components/atricles/articleCard.module.scss
@import "../../styles/variables.scss";

.article {
  &__date {
    color: $color-blue-sky;
    font-size: 1.2rem;
    font-weight: 600;
    margin-bottom: 1rem;
  }

  &__title {
    font-size: 2rem;
    font-weight: 600;
    line-height: 160%;
    color: rgba(0, 0, 0, 0.65);
    margin-bottom: 1.6rem;
    height: 6.5rem;

    @media only screen and (max-width: $breakpoint-xl) {
      margin-bottom: 0;
    }
  }

  &__paragraph {
    color: $color-gray-dark;
    font-weight: 400;
    font-size: 1.6rem;
    line-height: 150%;
    text-overflow: ellipsis;
    overflow: hidden;
    margin-bottom: 2.4rem;
    display: -webkit-box;
    -webkit-line-clamp: 3;
    -webkit-box-orient: vertical;
  }

  &__author {
    border-radius: 1rem;
    color: $color-blue-dark;
    background-color: $color-blue-light;
    padding: 0.8rem 2.4rem;
    font-size: 1.2rem;
    line-height: 1.8rem;
    font-weight: 600;
    margin-top: auto;
  }
}

.articles {
  &__article {
    display: flex;
    flex-direction: column;
    padding: 2.4rem;
    background-color: $color-white;
    border-radius: 2rem;
    width: 57.2rem;
    align-items: flex-start;
  }
}

@media only screen and (max-width: $breakpoint-xl) {
  .articles {
    &__article {
      width: 100%;
    }
  }
}

